--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,7 @@
 Source: python-cassandra-driver
 Section: python
 Priority: optional
-Maintainer: tcpcloud Packaging Team <pkg@tcpcloud.eu>
-XSBC-Original-Maintainer: Sandro Tosi <morph@debian.org>
+Maintainer: Sandro Tosi <morph@debian.org>
 Uploaders: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
 Build-Depends: debhelper (>= 9), python, python3, python-setuptools, python3-setuptools
 Standards-Version: 3.9.6
