--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Homepage: https://github.com/datastax/python-driver
 Vcs-Git: git://anonscm.debian.org/python-modules/packages/python-cassandra-driver.git
 Vcs-Browser: http://anonscm.debian.org/cgit/python-modules/packages/python-cassandra-driver.git
 
-Package: python-cassandra
+Package: python-cassandra-driver
 Architecture: all
 Depends: ${python:Depends}, ${misc:Depends}
 Suggests: python-snappy, python-lz4, python-blist
