--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,15 @@ Priority: optional
 Maintainer: tcpcloud Packaging Team <pkg@tcpcloud.eu>
 XSBC-Original-Maintainer: Sandro Tosi <morph@debian.org>
 Uploaders: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
-Build-Depends: debhelper (>= 9), python, python3, python-dev, python3-dev, python-setuptools, python3-setuptools
+Build-Depends: cython,
+               cython3,
+               debhelper (>= 9),
+               python,
+               python-dev,
+               python-setuptools,
+               python3,
+               python3-dev,
+               python3-setuptools
 Standards-Version: 3.9.6
 Homepage: https://github.com/datastax/python-driver
 Vcs-Git: git://anonscm.debian.org/python-modules/packages/python-cassandra-driver.git
@@ -12,8 +20,8 @@ Vcs-Browser: http://anonscm.debian.org/cgit/python-modules/packages/python-cassa
 
 Package: python-cassandra
 Architecture: all
-Depends: ${python:Depends}, ${misc:Depends}
-Suggests: python-snappy, python-lz4, python-blist
+Depends: ${misc:Depends}, ${python:Depends}
+Suggests: python-blist, python-lz4, python-snappy
 Provides: python-cassandra-driver
 Description: Python driver for Apache Cassandra
  A modern, feature-rich and highly-tunable Python client library for Apache
@@ -33,7 +41,7 @@ Description: Python driver for Apache Cassandra
 
 Package: python3-cassandra
 Architecture: all
-Depends: ${python3:Depends}, ${misc:Depends}
+Depends: ${misc:Depends}, ${python3:Depends}
 Suggests: python3-blist
 Description: Python driver for Apache Cassandra (Python 3)
  A modern, feature-rich and highly-tunable Python client library for Apache
