--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: python
 Priority: optional
 Maintainer: Sandro Tosi <morph@debian.org>
 Uploaders: Debian Python Modules Team <python-modules-team@lists.alioth.debian.org>
-Build-Depends: debhelper (>= 10), python-all-dev, python3-all-dev, python-all-dbg, python3-all-dbg, python-setuptools, python3-setuptools, libev-dev, cython, cython3, dh-python
+Build-Depends: debhelper (>= 9), python-all-dev, python3-all-dev, python-all-dbg, python3-all-dbg, python-setuptools, python3-setuptools, libev-dev, cython, cython3, dh-python
 Standards-Version: 3.9.8
 Homepage: https://github.com/datastax/python-driver
 Vcs-Git: https://anonscm.debian.org/git/python-modules/packages/python-cassandra-driver.git
@@ -13,6 +13,7 @@ Package: python-cassandra
 Architecture: any
 Depends: ${python:Depends}, ${misc:Depends}, ${shlibs:Depends}
 Suggests: python-snappy, python-lz4, python-blist
+Provides: python-cassandra-driver
 Description: Python driver for Apache Cassandra
  A modern, feature-rich and highly-tunable Python client library for Apache
  Cassandra (1.2+) and DataStax Enterprise (3.1+) using exclusively Cassandra's
